@startuml
' Interfaces
interface DiscountStrategy {
  +isApplicable(Promocode, Order, String): boolean
}

interface DiscountCalculator {
  +calculateDiscount(Promocode, Order): BigDecimal
}

DiscountCalculator -|> DiscountStrategy

' Concrete Strategies
class OrderMinimumStrategy {
  +isApplicable(Promocode, Order, String): boolean
}

class PercentageDiscountStrategy {
  +isApplicable(Promocode, Order, String): boolean
  +calculateDiscount(Promocode, Order): BigDecimal
}

' Services
class PromocodeService {
  +validateAndApplyPromocode(OrderRequestDTO): Order
}

class PromocodeValidatorService {
  +validate(Promocode, Order, String): boolean
  +applyDiscount(Promocode, Order, String): BigDecimal
}

' Entities
class Promocode {
  -id: long
  -code: String
  -discountType: DiscountType
  -discountValue: BigDecimal
  -startDate: LocalDate
  -endDate: LocalDate
  -active: boolean
  -minimumOrderAmount: BigDecimal
  -maxUsesTotal: int
  -maxUsesPerEmail: int
  --
  applicableProducts: Set<Product>
  applicableCategories: Set<Category>
}

enum DiscountType {
  PERCENTAGE
  FIXED_AMOUNT
}

class PromocodeUsageLog {
  -id: long
  -email: String
  -usedAt: LocalDateTime
  -discountApplied: BigDecimal
  --
  promocodeId: long
}

class Order {
  -id: long
  -totalPrice: BigDecimal
  -email: String
  -shippingAddress: String
  -orderItems: List<OrderItem>
  --
  promocode: Promocode (nullable)
}

' Relationships
PromocodeService --> PromocodeValidatorService
PromocodeService --> Promocode
PromocodeService --> Order
PromocodeService --> PromocodeUsageLog

PromocodeValidatorService --> DiscountStrategy
PercentageDiscountStrategy --> DiscountCalculator
OrderMinimumStrategy --> DiscountStrategy

Order --> Promocode : optional
Promocode --> PromocodeUsageLog : logs
@enduml